App #575: re-enabled keyboard plugin, syntax changed, and fixed overflow problem with full-height class

--- a/prototypes/app/source/css/components/Activity.styl
+++ b/prototypes/app/source/css/components/Activity.styl
@@ -20,6 +20,7 @@ Activity() {
     // NOTE: Incompatible with has-navbar
     &.full-height {
         height: 100%;
+        overflow: auto;
     }
 
     /* activity must be notified of the navbar to fix
